--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -82,8 +82,12 @@
     <!-- CORS for font files -->
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Methods" value="GET, HEAD, OPTIONS" />
+				<remove name="Access-Control-Allow-Origin" />
+				<remove name="Access-Control-Allow-Methods" />
+				<remove name="Access-Control-Allow-Headers" />
+				<remove name="Vary" />
+				<add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, HEAD, OPTIONS" />
         <add name="Access-Control-Allow-Headers" value="*" />
         <add name="Vary" value="Origin" />
       </customHeaders>
