--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -15,8 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
-    <!-- <add key="osCsid" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" /> -->
-		<add key="osCsid" value="8c3ce8d6bba871b9de29df066f3d36b1" />
+    <add key="osCsid" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
 
 		<add key="DiscordBotToken" value="xxxxxxxxxxxxxxxxxxxxxxxxxx.xxxxxx.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
     <!-- my real osCsid -->
@@ -43,8 +42,7 @@
   </log4net>
   <!-- Connection Strings -->
   <connectionStrings>
-    <!-- <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" /> -->
-		<add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=$__Chr1sV3l__" />
+    <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />
 
 	</connectionStrings>
   <!--
