Added CustomerController, TriggerbotController, Private and public Discord channels, removed NVorbis, added tests, updated dependencies

--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -18,7 +18,9 @@
     <add key="osCsid" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
 
 		<add key="DiscordBotToken" value="xxxxxxxxxxxxxxxxxxxxxxxxxx.xxxxxx.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
-    <!-- my real osCsid -->
+		<add key="DiscordChannelPrivate" value="1422040529809571880" />
+		<add key="DiscordChannelPublic" value="1360224553208516638" />
+		<!-- my real osCsid -->
     <add key="allowedIPs" value="" />
     <add key="deniedIPs" value="" />
     <add key="restrictIPs" value="false" />
@@ -42,8 +44,8 @@
   </log4net>
   <!-- Connection Strings -->
   <connectionStrings>
-    <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />
-
+		<!-- <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />-->
+		<add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=$__Chr1sV3l__" />
 	</connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -154,31 +156,31 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Bcl.TimeProvider" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Channels" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.6" newVersion="9.0.0.6" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -191,6 +193,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
