--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -25,7 +25,11 @@
     <add key="deniedIPs" value="" />
     <add key="restrictIPs" value="false" />
   </appSettings>
-  <log4net>
+	<!-- Connection Strings -->
+	<connectionStrings>
+		<add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />
+	</connectionStrings>
+	<log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="D:\DEV\Logs\TriggerlessAPI.log" />
       <appendToFile value="true" />
@@ -42,11 +46,6 @@
       <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
-  <!-- Connection Strings -->
-  <connectionStrings>
-		<!-- <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />-->
-		<add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=$__Chr1sV3l__" />
-	</connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
