Mods to Discord and Triggerbot controllers

--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -16,20 +16,19 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
     <add key="osCsid" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
-
 		<add key="DiscordBotToken" value="xxxxxxxxxxxxxxxxxxxxxxxxxx.xxxxxx.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
-		<add key="DiscordChannelPrivate" value="1422040529809571880" />
-		<add key="DiscordChannelPublic" value="1360224553208516638" />
-		<!-- my real osCsid -->
+    <add key="DiscordChannelPrivate" value="1422040529809571880" />
+    <add key="DiscordChannelPublic" value="1360224553208516638" />
+    <!-- my real osCsid -->
     <add key="allowedIPs" value="" />
     <add key="deniedIPs" value="" />
     <add key="restrictIPs" value="false" />
   </appSettings>
-	<!-- Connection Strings -->
-	<connectionStrings>
-		<add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />
-	</connectionStrings>
-	<log4net>
+  <!-- Connection Strings -->
+  <connectionStrings>
+    <add name="bootsters_db" connectionString="Data Source=XXXXXXXXXXXXXXXXXXXX;Initial Catalog=XXXXXXXXXXXX;Persist Security Info=True;User ID=XXXXXXXXXXXX;Password=XXXXXXXXXXXXXX" />
+  </connectionStrings>
+  <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="D:\DEV\Logs\TriggerlessAPI.log" />
       <appendToFile value="true" />
@@ -62,6 +61,8 @@
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="BundleModule" />
+      <remove name="Session" />
     </modules>
     <security>
       <requestFiltering>
@@ -85,11 +86,11 @@
     <!-- CORS for font files -->
     <httpProtocol>
       <customHeaders>
-				<remove name="Access-Control-Allow-Origin" />
-				<remove name="Access-Control-Allow-Methods" />
-				<remove name="Access-Control-Allow-Headers" />
-				<remove name="Vary" />
-				<add name="Access-Control-Allow-Origin" value="*" />
+        <remove name="Access-Control-Allow-Origin" />
+        <remove name="Access-Control-Allow-Methods" />
+        <remove name="Access-Control-Allow-Headers" />
+        <remove name="Vary" />
+        <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, HEAD, OPTIONS" />
         <add name="Access-Control-Allow-Headers" value="*" />
         <add name="Vary" value="Origin" />
@@ -178,10 +179,6 @@
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
@@ -192,10 +189,6 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
