--- a/Triggerless.API/packages.config
+++ b/Triggerless.API/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConcurrentHashSet" version="1.3.0" targetFramework="net472" />
-  <package id="Dapper" version="2.1.35" targetFramework="net472" />
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
   <package id="DSharpPlus" version="4.5.1" targetFramework="net472" />
   <package id="DSharpPlus.CommandsNext" version="4.5.1" targetFramework="net472" />
@@ -16,17 +16,20 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.3" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net461" />
+  <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Vorbis" version="1.5.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
+  <package id="NVorbis" version="0.10.5" targetFramework="net472" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="9.0.9" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="9.0.9" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="10.0.3" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="10.0.3" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.6.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
@@ -40,7 +43,7 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="10.0.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
