--- a/Triggerless.Services.Client/packages.config
+++ b/Triggerless.Services.Client/packages.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="LiteDB" version="5.0.21" targetFramework="net472" />
+  <package id="log4net" version="3.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.3" targetFramework="net472" />
+  <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Vorbis" version="1.5.0" targetFramework="net472" />
+  <package id="NVorbis" version="0.10.5" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
