--- a/Triggerless.Tests/packages.config
+++ b/Triggerless.Tests/packages.config
@@ -1,35 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Azure.Core" version="1.51.1" targetFramework="net472" />
+  <package id="Azure.Monitor.OpenTelemetry.Exporter" version="1.6.0" targetFramework="net472" />
   <package id="DSharpPlus" version="4.5.1" targetFramework="net472" />
   <package id="LiteDB" version="5.0.21" targetFramework="net472" />
   <package id="log4net" version="3.2.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights" version="2.23.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.9" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.9" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.9" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.8.4" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.8.4" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.8.4" targetFramework="net472" />
-  <package id="Microsoft.Testing.Platform" version="1.8.4" targetFramework="net472" />
-  <package id="Microsoft.Testing.Platform.MSBuild" version="1.8.4" targetFramework="net472" />
-  <package id="Microsoft.TestPlatform.AdapterUtilities" version="17.14.1" targetFramework="net472" />
-  <package id="Microsoft.TestPlatform.ObjectModel" version="17.14.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="10.0.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.Telemetry" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform.MSBuild" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.AdapterUtilities" version="18.0.1" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="18.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
   <package id="NUnit" version="4.4.0" targetFramework="net472" />
-  <package id="NUnit3TestAdapter" version="5.1.0" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="6.1.0" targetFramework="net472" />
+  <package id="OpenTelemetry" version="1.15.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api" version="1.15.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.15.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Extensions.Hosting" version="1.15.0" targetFramework="net472" />
+  <package id="OpenTelemetry.PersistentStorage.Abstractions" version="1.0.2" targetFramework="net472" />
+  <package id="OpenTelemetry.PersistentStorage.FileSystem" version="1.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="9.0.9" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="9.0.9" targetFramework="net472" />
+  <package id="System.ClientModel" version="1.9.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="10.0.3" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="10.0.3" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="10.0.3" targetFramework="net472" />
   <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Memory.Data" version="10.0.3" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
-  <package id="System.Reflection.Metadata" version="9.0.9" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="10.0.3" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
@@ -37,7 +60,9 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="System.Threading.Channels" version="9.0.9" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="10.0.3" targetFramework="net472" />
+  <package id="System.Text.Json" version="10.0.3" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="10.0.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
